# pyslm

./: MANIFEST.in  README.md  README.rst  main.py  pyproject.toml  setup.py
.github/instructions/: copilot-commit-message.instructions.md
docs/: index.rst
examples/: example.py  example_3d.py  example_3d_multithread.py  example_bitmap_slice.py  example_block_support_structure.py  example_custom_island_hatcher.py  example_custom_sinusoidal_hatching.py  example_exporting_multilayer.py  example_heatmap.py  example_implicit_surface.py  example_island_hatcher.py  example_parametric_study.py  overhangSupport.glb
pyslm/: core.py  visualise.py
pyslm/hatching/: hatching.py  islandHatcher.py
pyslm/support/: geometry.py  gridBlockSupport.py  render.py  support.py  utils.py
scripts/: block_support_structure_gen.py  glb_to_stl.py  overhangSupport.glb  overhangSupport.stl
